<resources>
    <string name="app_name">ShopTastic</string>

    <!--    Dummy-->
    <string name="tvDummyTitle">Dummy Title</string>
    <string name="tvDummyDesc">This is Dummy Description</string>
    <string name="tvDummyQuestion">Is this a Dummy Question ?</string>
    <string name="tvDummyDropdownOption">Dummy Option</string>
    <string name="tvDummyProductName">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</string>
    <string name="tvDummyProductPrice">$ 15.99</string>
    <string name="tvDummyProductRating">5.5</string>
    <string name="tvDummyProductCountRater">(317)</string>
    <string name="tvDummyProductCategory">women\'s clothing</string>
    <string name="tvDummyUsername">kevinryan</string>
    <string name="tvDummyPhoneNum">1–765–789–6734</string>
    <string name="tvDummyEmail">example@mail.com</string>
    <string name="tvDummyAddress">San Antonio, Hunters Creek Dr</string>
    <string name="tvDummyProductDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec faucibus arcu, a fringilla justo.</string>
    <string name="tvDummyProductCount">3</string>


    <!--    TextBox-->
    <string name="tvInputTextError">This form is required</string>


    <!--    Button-->
    <string name="btnTxtLogin">Login</string>
    <string name="btnTxtYes">Yes</string>
    <string name="btnTxtNo">No</string>
    <string name="btnTxtCancel">Cancel</string>
    <string name="btnTxtLogout">Logout</string>
    <string name="btnTxtAddToCart">Add to Cart</string>
    <string name="btnTxtCheckout">Checkout</string>
    <string name="btnTxtPurchase">Purchase</string>


    <!--    Login-->
    <string name="tvWelcomeTitle">Welcome back!</string>
    <string name="tvWelcomeDesc">Welcome to ShopTastic! Discover the finest products curated just for you.</string>
    <string name="tvRegisterInvTitle">Don\'t have account ? Register</string>
    <string name="tvRegisterInvDesc">here</string>
    <string name="itvTxtUsername">Username</string>
    <string name="itvTxtPassword">Password</string>

    <!--    Toast-->
    <string name="toastLoginSuccess">Login Success ! Directing to dashboard…</string>
    <string name="toastSaveToCartSuccess">Product has been successfully added to the cart.</string>

    <!--    Dialog-->
    <string name="dialogTxtLoginFailedTitle">Login Failed !</string>
    <string name="dialogTxtLoginFailedDesc">Please check your credentials and try again.</string>
    <string name="dialogTxtRetrievingFailedTitle">No Data !</string>
    <string name="dialogTxtRetrievingFailedDesc">Unable to retrieve data. Please try again later.</string>
    <string name="dialogTxtLogoutTitle">Logout</string>
    <string name="dialogTxtLogoutDesc">Are you sure want to log out ?</string>
    <string name="dialogTxtSuccessLogoutTitle">Log out Success</string>
    <string name="dialogTxtSuccessLogoutDesc">You have successfully logged out. See you again soon!</string>

    <!--    Dropdown-->
    <string name="dropdownCategories">--Select Categories--</string>
    <string name="tvListProductsTitle">List of Products</string>

    <!--    BottomSheet-->
    <string name="bsTxtProfileTitle">Profile</string>
    <string name="bsTxtUsernameTitle">Username</string>
    <string name="bsTxtEmailTitle">Email</string>
    <string name="bsTxtAddresssTitle">Address</string>
    <string name="bsTxtPhoneNumTitle">Phone</string>

    <!--    Detail-->
    <string name="tvDetailProductTitle">Detail Product</string>


    <!--    Format-->
    <string name="tvFormatCountRater">(%d)</string>

    <!--    Menu-->
    <string name="menuCart">Cart</string>

    <string name="tvClickHere">Click here</string>
    <string name="tvAddMoreItem">to add more this item to cart</string>
    <string name="cbTxtSelectAll">Select All</string>
    <string name="tvTotalPriceTitle">Total</string>

</resources>