<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_top_circular_rectangle_white">

    <View
        android:id="@+id/view1"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:background="@drawable/bg_circular_rectangle_roman_silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textSize="20sp"
        android:textColor="@color/flax_flower_blue"
        android:text="@string/bsTxtProfileTitle"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileTitle"
        android:layout_marginTop="20dp"
        android:src="@drawable/sample_photo"/>

    <TextView
        android:id="@+id/tvUsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:fontFamily="@font/redhatdisplay_bold"
        android:textColor="@color/void_century"
        android:textSize="16sp"
        android:text="@string/bsTxtUsernameTitle"/>

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        android:layout_marginTop="12dp"
        android:background="@null"/>

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/redhatdisplay_bold"
        android:textColor="@color/void_century"
        android:textSize="16sp"
        android:text="@string/bsTxtEmailTitle"/>

    <TextView
        android:id="@+id/tvUsernameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvUsernameTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameTitle"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_light"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tvDummyUsername"/>

    <TextView
        android:id="@+id/tvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_light"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tvDummyEmail"/>


    <TextView
        android:id="@+id/tvAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvUsernameTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameValue"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/redhatdisplay_bold"
        android:textColor="@color/void_century"
        android:textSize="16sp"
        android:text="@string/bsTxtAddresssTitle"/>

    <TextView
        android:id="@+id/tvAddressValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvAddressTitle"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressTitle"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_light"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tvDummyAddress"/>

    <TextView
        android:id="@+id/tvPhoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailValue"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/redhatdisplay_bold"
        android:textColor="@color/void_century"
        android:textSize="16sp"
        android:text="@string/bsTxtPhoneNumTitle"/>

    <TextView
        android:id="@+id/tvPhoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneTitle"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_light"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tvDummyPhoneNum"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@+id/tvAddressValue"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneValue"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressValue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="20dp"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_rectangle_red_white"
        android:text="@string/btnTxtLogout"
        android:textSize="14sp"
        android:textColor="@color/vivid_red"/>

</androidx.constraintlayout.widget.ConstraintLayout>