<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@null">

    <CheckBox
        android:id="@+id/cbProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:button="@drawable/bg_custom_checkbox"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toEndOf="@+id/cbProduct"
        app:layout_constraintTop_toTopOf="@+id/cbProduct"
        android:layout_marginStart="8dp"
        android:src="@drawable/sample_product"
        app:shapeAppearanceOverlay="@style/CircularBox"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivProduct"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/tvDummyProductName"/>

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvProductName"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textSize="12sp"
        android:textColor="@color/void_century"
        android:text="@string/tvDummyProductPrice"/>

    <TextView
        android:id="@+id/tvClickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redhatdisplay_regular"
        android:textSize="12sp"
        android:textColor="@color/bleu_de_france"
        android:text="@string/tvClickHere"/>

    <TextView
        android:id="@+id/tvClickHereDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvClickHere"
        app:layout_constraintTop_toTopOf="@+id/tvClickHere"
        app:layout_constraintBottom_toBottomOf="@+id/tvClickHere"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/redhatdisplay_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/tvAddMoreItem"/>

    <TextView
        android:id="@+id/tvCountProduct"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvClickHereDesc"
        app:layout_constraintBottom_toTopOf="@+id/view1"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:fontFamily="@font/redhatdisplay_medium"
        android:textColor="@color/white"
        android:background="@drawable/bg_circle_electric_eel"
        android:textSize="12sp"
        android:text="@string/tvDummyProductCount"
        android:visibility="gone"
        tools:visibility="visible"/>

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/roman_silver"/>

</androidx.constraintlayout.widget.ConstraintLayout>