<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/emptiness">

    <!-- Main Content View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.detail.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailActionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/svContent"
            android:background="@color/flax_flower_blue"/>

        <ScrollView
            android:id="@+id/svContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailActionbar"
            app:layout_constraintBottom_toTopOf="@+id/clAction">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tvProductPrice"
                    android:src="@drawable/sample_product"/>


                <TextView
                    android:id="@+id/tvProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivProduct"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/redhatdisplay_bold"
                    android:textSize="25sp"
                    android:textColor="@color/flax_flower_blue"
                    android:text="@string/tvDummyProductPrice"/>

                <TextView
                    android:id="@+id/tvProductName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/redhatdisplay_medium"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/tvDummyProductName"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tvProductName"
                    app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:background="@drawable/bg_circular_rectangle_white_aplause">

                    <ImageView
                        android:id="@+id/ivStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_star_rate"/>

                    <TextView
                        android:id="@+id/tvCountRater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/flintstone"
                        android:textSize="12sp"
                        android:fontFamily="@font/redhatdisplay_light"
                        android:text="@string/tvDummyProductCountRater"/>

                    <TextView
                        android:id="@+id/tvProductRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/ivStar"
                        app:layout_constraintEnd_toStartOf="@+id/tvCountRater"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginHorizontal="3dp"
                        android:textColor="@color/void_century"
                        android:textSize="12sp"
                        android:fontFamily="@font/redhatdisplay_regular"
                        android:text="@string/tvDummyProductRating"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/clRating"
                    app:layout_constraintTop_toTopOf="@+id/clRating"
                    app:layout_constraintBottom_toBottomOf="@+id/clRating"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/redhatdisplay_regular"
                    android:textSize="13sp"
                    android:textColor="@color/dwarven_peaches"
                    android:text="@string/tvDummyProductCategory"/>

                <TextView
                    android:id="@+id/tvDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/clRating"
                    app:layout_constraintTop_toBottomOf="@+id/clRating"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/redhatdisplay_semibold"
                    android:textSize="18sp"
                    android:textColor="@color/void_century"
                    android:text="@string/tvDetailProductTitle"/>

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintStart_toEndOf="@+id/tvDescriptionTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvDescriptionTitle"
                    app:layout_constraintBottom_toBottomOf="@id/tvDescriptionTitle"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/flintstone"/>

                <TextView
                    android:id="@+id/tvProductDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/redhatdisplay_regular"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/tvDummyProductDescription"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAction"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svContent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddToCart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnPurchase"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_circular_rectangle_primary_white"
                android:textColor="@color/flax_flower_blue"
                android:textSize="16sp"
                android:fontFamily="@font/redhatdisplay_semibold"
                android:textAllCaps="false"
                android:text="@string/btnTxtAddToCart"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPurchase"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/btnAddToCart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="2dp"
                android:background="@drawable/primary_background"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/redhatdisplay_semibold"
                android:textAllCaps="false"
                android:text="@string/btnTxtPurchase"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Loading Layout -->
    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:visibility="gone"
        tools:visibility="visible">

        <!-- Progress indicator or loading animation goes here -->
        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/bleu_de_france"/>

    </RelativeLayout>

</FrameLayout>